Navbar overlap fix, and fix styling and icon

--- a/Documents/style/stylesheet.css
+++ b/Documents/style/stylesheet.css
@@ -5,8 +5,8 @@
 }
 body{ 
 	background-color: black;
+	margin: 0;
 }
-
 /* Style for the responsive navBurger. */
 nav{
 	display: flex;
@@ -26,23 +26,27 @@ nav{
 	list-style: none;
 }
 .nav-links a{
-	color: #4DC58D;
+	color: whitesmoke;
 	text-decoration: none;
 	letter-spacing: 2.2px;
 	font-size: 18px;
 }
-
 .burger{
 	display: none;
 	cursor: pointer;
 }
-
 .burger div{
 	width: 25px;
 	height: 2px;
 	background-color: #4DC58D;
 	margin: 5px;
 	transition: all 0.3s ease-in;
+}
+a:hover{
+	color: #4DC58D;
+}
+a:active{
+	color: #5B9BD5;
 }
 
 /* burger animation upon click */
@@ -58,15 +62,13 @@ nav{
 
 /* Original css styles  */
 .wrapper{
-    margin: auto;
+	margin: auto;
     width: 50%;
     margin-bottom: 7%;
 }
-
 section{
-	padding-top: 20px;
+	padding-top: 6vh;
 }
-
 header{
 	padding-top: 20px;
 }
@@ -74,12 +76,10 @@ header{
 .clientList{
 	list-style: none;
 }
-
 /* SPACING LISTEELEMENTER */
 ol > li{
 	padding-bottom: 8px;
 }
-
 /* TEKST */
 p,h1,h2,h3,li,dl,dt,dd,b,strong {
 	font-family: 'Lato';
@@ -109,7 +109,6 @@ hr{
 	margin: auto;
 	width: 100%;
 }
-
 /* IKONVISNING */
 
 #client-icon{
@@ -123,6 +122,11 @@ hr{
 #content-icon{
 	padding-right: 1%;
 	width:calc(15px + 1.5vw);
+}
+#nav-icon{
+	padding-right: 1%;
+	width:calc(8px + 1.5vw);
+	vertical-align: middle;
 }
 #requirements-icon{
 	padding-right: 1%;
@@ -162,13 +166,13 @@ hr{
 	margin-right: -40px;
 	margin-bottom: -20px;
 }
-
 /* List of minimum requirements */ 
+
 li{
 	margin: 0 0 0.5em 0;
 }
-
 /* CODES TYLE */
+
 code{
 	
 	background-color: rgba(77, 197, 141, 0.4);
@@ -180,8 +184,8 @@ code{
 	font-size:calc(8px + 0.5vw);
 	font-weight: 100;
 }
-
 /* Responsiveness + navBurger settings mobile*/
+
 @media screen and (max-width:768px){
 	body{
 		overflow-x: hidden;
@@ -215,7 +219,6 @@ code{
 		margin-bottom: 7%;
 	}
 }
-
 .nav-active{
 	transform: translateX(0);
 	display: flex;
@@ -230,7 +233,6 @@ code{
 		transform: translateX(0px);
 	}
 }
-
 /* #timetag{
 	background-color: #4DC58D;
 	display: table;
@@ -251,25 +253,22 @@ code{
 } */
 
 /*TABLE DESIGN*/
+
 table {
 	font-family: arial, sans-serif;
 	border-collapse: collapse;
 	width: 100%;
 }
-  
 td, th {
 	text-align: left;
 	padding: 8px;
 }
-
 tr:nth-child(even) {
 	background-color: #dddddd;
 }
-
 tr:nth-child(odd) {
 	background-color: #adadad;
 }
-
 table{
 	border: 2px solid white;
 }
@@ -280,17 +279,11 @@ table #first{
 	background-color: #4DC58D;
 	font-size: 1.2em;
 }
-
-
-
-
 /*LIST OF FILE AND FOLDERS*/
-ul{
+
+#plan ul{
 	padding: 0 0 0 30px;
 }
 ul ul{
 	padding: 0 0 0 20px;
 }
-
-
-
